Append "-viewmode" to the view mode actions added to the action collection in order to avoid overwritting an existing action with the same name, e.g. konsolepart.

BUG: 266517
FIXED-IN: 4.8.0
REVIEW: 103590
(cherry picked from commit c0341d4479830d3e47b8ce9f31f6761e8ec8f4bc)